@@ -1,6 +1,8 @@
 2008-11-29  higepon  <higepon@users.sourceforge.jp>
 
-        * Psyntax pass throuh the and/or to backend.
+        * example/affine.scm : Added.
+
+        * Psyntax pass through the and/or to backend.
 
 2008-11-28  higepon  <higepon@users.sourceforge.jp>
 
